Time: 519 ms (17.24%), Space: 52.1 MB (32.8%) - LeetHub